Fix: moved title above carousel with a span, deleted title above nav menu, letter spacing between words

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,14 @@ h3 {
 
 h1 {
   margin: 20px 0;
+  margin-bottom: 10px;
+  letter-spacing: 5px; 
+  text-align: left;
+}
+
+h1 span {
+  display: block;
+  font-size: 0.8em; 
 }
 
 
